# vinox-voxel-editor

./: Cargo.toml  README.md
resources/: fancy.wgsl  psx.wgsl
src/: main.rs
